solve issues with dates and widget and plan schedule

--- a/TripPlannerWidget/MainInterface.storyboard
+++ b/TripPlannerWidget/MainInterface.storyboard
@@ -20,7 +20,7 @@
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GcN-lo-r42">
                                 <rect key="frame" x="20" y="8" width="280" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="qx6-x1-VmK"/>
+                                    <constraint firstAttribute="height" constant="21" id="C0M-mk-1AB"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
@@ -34,13 +34,13 @@
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="5aH-vW-nFz" firstAttribute="top" secondItem="GcN-lo-r42" secondAttribute="bottom" constant="1" id="9i4-j1-bea"/>
-                            <constraint firstItem="GcN-lo-r42" firstAttribute="centerX" secondItem="S3S-Oj-5AN" secondAttribute="centerX" id="CZq-VF-8hk"/>
-                            <constraint firstItem="GcN-lo-r42" firstAttribute="top" secondItem="C8Y-Df-SDD" secondAttribute="bottom" constant="8" symbolic="YES" id="TA1-r3-jbs"/>
-                            <constraint firstItem="5aH-vW-nFz" firstAttribute="leading" secondItem="GcN-lo-r42" secondAttribute="leading" id="dgr-SW-hAU"/>
-                            <constraint firstItem="GcN-lo-r42" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" constant="4" id="gyd-fA-OYb"/>
-                            <constraint firstItem="5aH-vW-nFz" firstAttribute="trailing" secondItem="S3S-Oj-5AN" secondAttribute="trailingMargin" id="rzx-Z5-KQx"/>
-                            <constraint firstItem="OPp-Ku-gIY" firstAttribute="top" secondItem="5aH-vW-nFz" secondAttribute="bottom" constant="9" id="xmW-WD-7SO"/>
+                            <constraint firstItem="GcN-lo-r42" firstAttribute="top" secondItem="C8Y-Df-SDD" secondAttribute="bottom" constant="8" symbolic="YES" id="0Vd-8z-6nZ"/>
+                            <constraint firstItem="OPp-Ku-gIY" firstAttribute="top" secondItem="5aH-vW-nFz" secondAttribute="bottom" constant="9" id="0bc-qL-7yR"/>
+                            <constraint firstItem="5aH-vW-nFz" firstAttribute="top" secondItem="GcN-lo-r42" secondAttribute="bottom" constant="1" id="8Qo-fG-eED"/>
+                            <constraint firstItem="5aH-vW-nFz" firstAttribute="leading" secondItem="GcN-lo-r42" secondAttribute="leading" id="Blb-ot-x1a"/>
+                            <constraint firstItem="5aH-vW-nFz" firstAttribute="trailing" secondItem="S3S-Oj-5AN" secondAttribute="trailingMargin" id="SSk-Ug-ag1"/>
+                            <constraint firstItem="GcN-lo-r42" firstAttribute="centerX" secondItem="S3S-Oj-5AN" secondAttribute="centerX" id="SaF-Wr-g6f"/>
+                            <constraint firstItem="GcN-lo-r42" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" constant="4" id="rKP-r0-WOP"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
